# torch-max-backend

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONVOLUTION_BACKWARD_RESEARCH.md  CONVOLUTION_BACKWARD_RESEARCH_INDEX.md  CONVOLUTION_BACKWARD_SUMMARY.md  IMPLEMENTATION_REVIEW.md  README.md  make_cov_report.sh  pyproject.toml  test_debug.py
.claude/skills/aten-ops/: README.md  SKILL.md
.claude/skills/aten-ops/assets/: operation_template.py  test_template.py
.claude/skills/mojo-gpu-kernels/: README.md  SKILL.md  USAGE.md
.claude/skills/mojo-kernels/: SKILL.md
.github/workflows/: ci.yml
demo_scripts/: densenet.py  gemma3.py  gpt2.py  mnist.py  no_graph_breaks.py  vgg.py  vgg_export.py
demo_scripts/dummy_mojo_kernels/: dummy.mojo
demo_scripts/nanochat/: chat_cli.py  checkpoint_manager.py  engine.py  gpt.py
demo_scripts/nanochat/nanochat/: adamw.py  checkpoint_manager.py  common.py  engine.py  gpt.py  muon.py  tokenizer.py
docs/: CONTRIBUTING.md
pretrained_models/: densenet.py  gemma3.py  gpt2.py  qwen.py  vgg.py
tests/: conftest.py  test_aten_functions.py  test_compiler.py  test_high_level_ops.py  test_max_device.py  test_mnist.py
tests/dummy_mojo_kernels/: dummy.mojo
tests/models/: __init__.py  test_mnist.py
torch_max_backend/: __init__.py  aten_functions.py  compiler.py  custom_mojo_ops.py  debug.py  flags.py  max_device.py  max_device_aten_ops.py  profiler.py  testing.py  torch_custom_ops.py  torch_max_device_module.py  torch_max_tensor.py  types.py  utils.py
torch_max_backend/custom_torch_ops_in_mojo/: torch_custom_ops.py
torch_max_backend/max_device/: log_aten_calls.py  max_device_aten_ops.py  register.py  torch_max_device_module.py  torch_max_tensor.py
torch_max_backend/mojo_kernels/: __init__.mojo  activations.mojo  bitwise.mojo  conv_backward.mojo  math.mojo  pooling.mojo
torch_max_backend/torch_compile_backend/: compiler.py  debug.py  exporter.py
(+9 files in other folders)
